@@ -2,6 +2,5 @@ Remove Weibull alias
 Remove WeibullMuSigma alias
 Remove WeibullFactory alias, +buildAsWeibull deprecated methods
 Remove deprecated GumbelAB
-Remove GetLeastSquaresAlgorithmNames
 Remove Event class in 1.16
 Removed deprecated EnumerateFunction constructors
