@@ -116,9 +116,6 @@ public:
   static Description GetAlgorithmNames();
   static Description GetAlgorithmNames(const OptimizationProblem & problem);
 
-  /** @deprecated Get least-squares optimization algorithm names */
-  static Description GetLeastSquaresAlgorithmNames();
-
   /** String converter */
   virtual String __repr__() const;
 
