@@ -32,11 +32,11 @@ of the sample of boostrap optimum parameters.
 The resulting distribution of the output error is a :class:`~openturns.Normal` and is 
 computed from the residuals. 
 
-If OpenTURNS was built with least squares optimization algorithms, then the algorithm used is the 
-first found in `GetLeastSquaresAlgorithmNames` of :class:`~openturns.OptimizationAlgorithm`. 
-Otherwise, the algorithm :class:`~openturns.TNC` is used combined with 
-a multistart algorithm which makes use of the `NonLinearLeastSquaresCalibration-MultiStartSize` 
-key in the :class:`~openturns.ResourceMap`. 
+If least squares optimization algorithms are enabled, then the algorithm used is the
+first found by `Build` of :class:`~openturns.OptimizationAlgorithm`.
+Otherwise, the algorithm :class:`~openturns.TNC` is used combined with
+a multistart algorithm which makes use of the `NonLinearLeastSquaresCalibration-MultiStartSize`
+key in the :class:`~openturns.ResourceMap`.
 
 See also
 --------
